--- a/checkmarx-ast-eclipse-plugin/build.properties
+++ b/checkmarx-ast-eclipse-plugin/build.properties
@@ -3,13 +3,13 @@ bin.includes = plugin.xml,\
                META-INF/,\
                icons/,\
                lib/slf4j-simple-1.7.5.jar,\
-               lib/slf4j-log4j12-1.7.5.jar,\
-               lib/slf4j-api-1.7.5.jar,\
+               lib/slf4j-reload4j-1.7.36.jar,\
+               lib/slf4j-api-1.7.5.jar, \
                lib/jackson-annotations-2.12.4.jar,\
                lib/jackson-core-2.12.4.jar,\
                lib/commons-lang3-3.12.0.jar,\
                lib/ast-cli-java-wrapper-1.0.60.jar,\
-               lib/jackson-databind-2.13.2.2.jar,\
+               lib/jackson-databind-2.13.4.2.jar,\
                lib/org.eclipse.mylyn.commons.ui_3.25.2.v20200813-0821.jar,\
                .,\
                lib/org.apache.commons.lang_2.6.0.v20220406-2305.jar,\
