--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,6 @@
 		</repository>
 
 	</repositories>
-
 	<dependencies>
 		<dependency>
 			<groupId>jakarta.inject</groupId>
@@ -187,5 +186,12 @@
 			<artifactId>org.osgi.service.event</artifactId>
 			<version>1.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.27.7</version>
+			<scope>test</scope>
+		</dependency>
+
     </dependencies>
 </project>
